--- a/styles/idiomas.css
+++ b/styles/idiomas.css
@@ -30,3 +30,27 @@
 .idiomas__item-titulo-destaque{
     color: var(--cor-cinza);
 }
+
+
+@media screen and (max-width: 600px) {
+    .idiomas{
+        margin: 0;
+    }
+    .idiomas__titulo{
+        font-size: 26px;
+        margin-right: 0;
+        border-bottom: 2px solid;
+    }
+    .idiomas__lista{
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+        margin-bottom: 2em;
+    }
+    .idiomas__item-titulo{
+        font-size: 18px;
+    }
+    .idiomas__item-descricao{
+        font-size: 14px;
+    }
+}
