--- a/style.css
+++ b/style.css
@@ -20,3 +20,12 @@ body{
     font-weight: 400;
     font-family: "Inter" 
 }
+
+@media all and (max-width:600px) {
+    body{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        gap: 0;
+    }
+}
