--- a/styles/info.css
+++ b/styles/info.css
@@ -66,7 +66,7 @@
 
 @media all and (max-width:600px){
     .info{
-        margin-left: 2em;
+        margin-left: 0;
         padding: 3em;
         font-size: 14px;
         width: 30%;
